src/tests/render_snapshots/snapshots/sabiql__render_snapshots__result_pane__result_pane_json_edit_mode.snap
---
source: src/tests/render_snapshots/result_pane.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                ╭ JSON Edit ── settings (json) ────────────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │{                                                                                                                                 │               │
│                │  "count": 5,                                                                                                                     │               │
│                │  "nested": {                                                                                                                     │               │
│                │    "enabled": true,                                                                                                              │               │
│                │    "roles": [                                                                                                                    │               │
│                │      "admin",                                                                                                                    │               │
│                │      "writer"                                                                                                                    │               │
│                │    ]                                                                                                                             │               │
│                │  },                                                                                                                              │               │
│                │  "theme": "dark"                                                                                                                 │               │
│                │}                                                                                                                                 │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │r"]}}          │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │✓ Valid JSON                                                                                                                      │               │
│                ╰ Esc: Normal ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc:Normal  ↑↓←→:Move  Home/End:Line
